# task4

py_publisher/install/: local_setup.sh  setup.bash  setup.sh
py_publisher/install/publish_pkg/lib/publish_pkg/: publisher_node  subscriber_node
py_publisher/install/publish_pkg/share/publish_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
py_publisher/log/: latest_build  latest_list
py_publisher/src/publish_pkg/: setup.cfg  setup.py
qml_ws/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
qml_ws/install/qml_pkg/lib/qml_pkg/: deneme  main
qml_ws/install/qml_pkg/share/ament_index/resource_index/parent_prefix_path/: qml_pkg
qml_ws/install/qml_pkg/share/qml_pkg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
qml_ws/install/qml_pkg/share/qml_pkg/cmake/: qml_pkgConfig.cmake
qml_ws/install/qml_pkg/share/qml_pkg/environment/: ament_prefix_path.sh  path.sh
qml_ws/log/: latest_build  latest_list
qml_ws/src/qml_pkg/: CMakeLists.txt  package.xml
qml_ws/src/qml_pkg/src/: main.cpp  main.qml
