<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qml_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nida@todo.todo">nida</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>example_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>Qt6</build_depend>
  
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>Qt6</exec_depend>
  <exec_depend>Qt6Quick</exec_depend>
  <exec_depend>Qt6Widgets</exec_depend>
  <exec_depend>Qt6Gui</exec_depend>
  <exec_depend>Qt6Qml</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
